--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
-    smoke: marker for smoke tests
-    regression: marker for regression tests
+    login_guest : регистрируем пользователя на сайте
+    need_review : требует проверки
